<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,ExtraTranslation">
    <string name="confirm">确定</string>
    <string name="sure">确定</string>
    <string name="cancel_">取消</string>
    <string name="tips">提示</string>
    <string name="avatar">头像</string>
    <string name="share">分享</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="sex">性别</string>
    <string name="sex_secrecy">保密</string>
    <string name="save">保存</string>
    <string name="delivering">发表</string>
    <string name="send">发送</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="retry">重试</string>
    <string name="refresh">刷新</string>
    <string name="add">添加</string>
    <string name="none">无</string>
    <string name="submit">提交</string>
    <string name="email">邮箱</string>
    <string name="username">用户名</string>
    <string name="nickname">昵称</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="remark">备注</string>
    <string name="name">姓名</string>
    <string name="title">标题</string>
    <string name="default_">默认</string>
    <string name="account">账号</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="color">颜色</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">确定要退出登录吗？</string>
    <string name="password">密码</string>
    <string name="photo">照片</string>
    <string name="search">搜索</string>
    <string name="okay">好的</string>
    <string name="modify">修改</string>
    <string name="exit">退出</string>
    <string name="and">和</string>
    <string name="unknow">未知</string>
    <string name="agree">同意</string>
    <string name="not_agree">不同意</string>
    <string name="not_allow">不允许</string>
    <string name="refuse">拒绝</string>
    <string name="call">呼叫</string>
    <string name="caesura_sign">、</string>
    <string name="comma">，</string>
    <string name="currency_mask">¥%s</string>
    <string name="brackets_mask">(%s)</string>
    <string name="scoring_mask">%s分</string>
    <string name="currency_unit">¥</string>
    <string name="error_net_error">网络连接失败，请检查网络喔</string>
    <string name="error_service_error">服务器开小差了，请稍后重试喔</string>
    <string name="error_request_error">请求失败，code(400–500)！</string>
    <string name="error_service_data_error">服务器数据异常</string>
    <string name="error_api_code_mask_tips">请求错误！，错误码为(%d)</string>
    <string name="error_unknow">未知错误</string>
    <string name="load_error_retry_tips">数据加载失败，是否重试？</string>
    <string name="submit_error_retry_tips">数据提交失败，是否重试？</string>
    <string name="page_error_load_fail_tips">加载失败了/(ㄒoㄒ)/~~ </string>
    <string name="page_error_retry_action_tips">重新加载</string>
    <string name="page_error_retry_scan">重新扫描</string>
    <string name="page_error_no_data">暂无可用数据喔</string>
    <string name="page_loading">正在努力加载数据…</string>
    <string name="page_error_no_network">@string/error_net_error</string>
    <string name="page_error_server_error">@string/error_service_error</string>
    <string name="obtain_validate_code">获取验证码</string>
    <string name="sms_code">短信验证码</string>
    <string name="sms_code_enter_tips">请输入短信验证码</string>
    <string name="sms_code_no_match_tips">验证码错误，请重新输入</string>
    <string name="sms_code_again_tips_mask">(%s)重新获取</string>
    <string name="password_enter_tips">请输入密码</string>
    <string name="password_no_match_tips">密码不符合格式要求</string>
    <string name="confirm_password_error_tips">两次输入密码不一致</string>
    <string name="confirm_password_tips">请再次输入密码</string>
    <string name="cellphone_enter_tips">请输入手机号</string>
    <string name="cellphone_no_match_tips">手机号错误，请重新输入</string>
    <string name="nick_name_empty_tips">昵称不能为空！</string>
    <string name="child_nick_name_tips">昵称不能包含特殊字符！</string>
    <string name="check_version_new_version_tips">发现新版本</string>
    <string name="check_version_update_failed">检测更新失败</string>
    <string name="check_version_downloading_apk">正在下载更新</string>
    <string name="check_version_download_app_fail">下载更新失败</string>
    <string name="check_version_installing_app_tips">新版 APP 已下载完成，快去安装吧</string>
    <string name="check_version_download_app_fail_retry">下载更新失败，是否重试？</string>
    <string name="check_version_immediately">立即升级</string>
    <string name="check_version_ignore">忽略此版本</string>
    <string name="check_version_is_least">已是最新版本</string>
    <string name="check_version_update_wifi_tips">建议在WiFi环境下下载更新</string>
    <string name="we_need_permission_mask">我们需要%s权限喔</string>
    <string name="gelei_need_to_access_permission_mask">格雷盒子家长想访问您的%s</string>
    <string name="permission_to_set_mask">在“设置->应用->%1$s->权限管理”中开启%2$s权限</string>
    <string name="welcome_to_gelei">欢迎使用格雷盒子</string>
    <string name="image_save_success_tips">图片已保存到相册</string>
    <string name="image_save_fail_tips">图片保存失败</string>
    <string name="uninstall_wechat">哎呀，您还未安装微信</string>
    <string name="uninstall_ali_pay">哎呀，您还未安装支付宝</string>
    <string name="uninstall_qq">哎呀，您还未安装QQ</string>
    <string name="dialog_loading">请稍等…</string>
    <string name="requesting_tips">请稍等…</string>
    <string name="login_register">登录/注册</string>
    <string name="password_login">密码登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="widget_read_more_read_more">展开全文</string>
    <string name="widget_read_more_read_less">收起</string>
    <string name="forgot_password">忘记密码</string>
    <string name="hint_setup_password">请输入8–16位英文数字组合</string>
    <string name="setup_password">设置密码</string>
    <string name="click_completing_meaning">点击完成即代表同意</string>
    <string name="click_login_register_meaning">点击登录/注册即代表同意</string>
    <string name="user_permit_agreement_with_guillemet">《用户许可协议》</string>
    <string name="user_agreement_with_guillemet">《用户协议》</string>
    <string name="privacy_policy_with_guillemet">《隐私政策》</string>
    <string name="validate_code_login">验证码登录</string>
    <string name="register_success">注册成功</string>
    <string name="retrieve_password">找回密码</string>
    <string name="next_step">下一步</string>
    <string name="validate_cellphone">验证手机号</string>
    <string name="sms_code_send_to_cellphone_tips_mask">验证码已经发送至%s （手机号）</string>
    <string name="reset_password">重新设置密码</string>
    <string name="login_successfully">登录成功</string>
    <string name="bind_successfully">绑定成功</string>
    <string name="child_name_hint">输入孩子的名字或小名</string>
    <string name="what_is_child_name">孩子叫什么呢:</string>
    <string name="child_sex_male">小帅哥</string>
    <string name="child_sex_female">小美女</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="click_select_birthday">点击选择出生年月日</string>
    <string name="what_is_child_birthday">什么时候出生的:</string>
    <string name="click_select_grade">点击选择年级</string>
    <string name="what_is_child_grade">读几年级啦：</string>
    <string name="fill_child_information">填写孩子信息</string>
    <string name="what_is_child_sex">孩子是:</string>
    <string name="father">爸爸</string>
    <string name="mother">妈妈</string>
    <string name="girl">闺女</string>
    <string name="son">儿子</string>
    <string name="relatives">亲友</string>
    <string name="other_relative">其他亲友</string>
    <string name="what_is_your_relationship_with_child">您是孩子的:</string>
    <string name="bind_child_devices">绑定孩子手机</string>
    <string name="bind_child_devices_tips1">用孩子手机扫描二维码下载孩子端</string>
    <string name="bind_child_devices_tips2">分享下载链接给孩子</string>
    <string name="bind_child_supported_devices_tips">我家孩子手机能不能绑定呢？点击查看</string>
    <string name="already_installed_next">已安装孩子端，下一步</string>
    <string name="previous_step">上一步</string>
    <string name="scan_qrcode">扫码绑定</string>
    <string name="select_guard_level">选择守护等级</string>
    <string name="mild">轻度</string>
    <string name="moderate">中度</string>
    <string name="severe">重度</string>
    <string name="mild_desc">16岁及以上</string>
    <string name="moderate_desc">13至15岁</string>
    <string name="severe_desc">0至12岁</string>
    <string name="level_recommend">(推荐)</string>
    <string name="applicable_age">适用年龄</string>
    <string name="use_functions_colon">可用功能</string>
    <string name="understand_functions">了解功能</string>
    <string name="optional_functions">%s（可选）</string>
    <string name="child_device_already_bind">该二维码设备已经被绑定啦</string>
    <string name="rescan">重新扫描</string>
    <string name="device_binding_loading_tips">正在绑定设备，请稍候</string>
    <string name="binding_device_success_tips">绑定成功</string>
    <string name="qrcode_error">二维码错误</string>
    <string name="set_successfully">设置成功</string>
    <string name="data_load_fail_ask_retry">数据加载失败，是否重试？</string>
    <string name="grade">年级</string>
    <string name="grade_0">一年级以下</string>
    <string name="grade_1">一年级</string>
    <string name="grade_2">二年级</string>
    <string name="grade_3">三年级</string>
    <string name="grade_4">四年级</string>
    <string name="grade_5">五年级</string>
    <string name="grade_6">六年级</string>
    <string name="grade_7">七年级（初一）</string>
    <string name="grade_8">八年级（初二）</string>
    <string name="grade_9">九年级（初三）</string>
    <string name="grade_10">十年级（高一）</string>
    <string name="grade_11">十一年级（高二）</string>
    <string name="grade_12">十二年级（高三）</string>
    <string name="grade_13">大学</string>
    <string name="grade_name_0">@string/grade_0</string>
    <string name="grade_name_1">@string/grade_1</string>
    <string name="grade_name_2">@string/grade_2</string>
    <string name="grade_name_3">@string/grade_3</string>
    <string name="grade_name_4">@string/grade_4</string>
    <string name="grade_name_5">@string/grade_5</string>
    <string name="grade_name_6">@string/grade_6</string>
    <string name="grade_name_7">初一</string>
    <string name="grade_name_8">初二</string>
    <string name="grade_name_9">初三</string>
    <string name="grade_name_10">高一</string>
    <string name="grade_name_11">高二</string>
    <string name="grade_name_12">高三</string>
    <string name="grade_name_13">大学</string>
    <string name="main_tab_home">守护</string>
    <string name="main_tab_grow_diary">成长日记</string>
    <string name="main_tab_mine">我的</string>
    <string name="main_exit_tips">再点击一次退出 app</string>
    <string name="grow_value">成长值</string>
    <string name="forbidden_period">禁用时段</string>
    <string name="remaining_available">剩余可用</string>
    <string name="change_password_confirm">@string/submit</string>
    <string name="i_got_it">我知道了</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="toolbar_title_change_pwd">修改登录密码</string>
    <string name="member_expired_at_yesterday">您的高级会员已于昨日到期</string>
    <string name="member_expired_functions_desc">会员到期不影响孩子的成长树、成长日记等信息</string>
    <string name="member_expired_retaining_desc">多设备是高级会员功能，请选择您要保留的设备，其余的将失效。如不操作，明天将默认保留当前设备喔。</string>
    <string name="renewal_fee_member">续费会员</string>
    <string name="confirm_retain_the_device">确认保留此设备</string>
    <string name="open_supervise_model">开启监督模式</string>
    <string name="how_to_operate">如何操作？</string>
    <string name="watch_operational_video">观看操作视频</string>
    <string name="call_customer_service">联系客服</string>
    <string name="supervise_model_details">孩子手机是苹果手机，由于ios系统的限制，需要您通过电脑开启孩子手机的监督模式喔。</string>
    <string name="open_supervise_model_step">1.请先用电脑访问：zs7.gwchina.cn，下载安装格雷助手；\n2.然后按照网站上的操作指引或者是下方的操作视频，完成后续操作。</string>
    <string name="user_privacy_agreement">在您使用格雷盒子前，请您认真阅读并了解用户协议和隐私政策，以了解我们的服务内容和我们在收集和使用您相关个人信息时的处理规则。我们将严格按照用户协议和隐私政策为您提供服务，保护您的个人信息。</string>
    <string name="android_phone_use_green_net">安卓手机使用绿网浏览器上网才会支持网址拦截喔</string>
    <string name="child_not_install_green_browser">孩子端还未安装绿网浏览器，请先安装才能开启网址守护</string>
</resources>