<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gwchina.parent.level.widget.LevelView
        android:id="@+id/levelLvMild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lv_desc="@string/mild_desc"
        app:lv_icon_normal_res="@drawable/level_icon_mild_default"
        app:lv_icon_selected_res="@drawable/level_icon_mild_selected"
        app:lv_name="@string/mild"/>

    <com.gwchina.parent.level.widget.LevelView
        android:id="@+id/levelLvModerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="@id/levelLvMild"
        app:layout_constraintTop_toTopOf="parent"
        app:lv_desc="@string/moderate_desc"
        app:lv_icon_normal_res="@drawable/level_icon_mid_default"
        app:lv_icon_selected_res="@drawable/level_icon_mid_selected"
        app:lv_name="@string/moderate"/>

    <com.gwchina.parent.level.widget.LevelView
        android:id="@+id/levelLvSevere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="@id/levelLvModerate"
        app:layout_constraintTop_toTopOf="parent"
        app:lv_desc="@string/severe_desc"
        app:lv_icon_normal_res="@drawable/level_icon_import_default"
        app:lv_icon_selected_res="@drawable/level_icon_import_selected"
        app:lv_name="@string/severe"/>

</android.support.constraint.ConstraintLayout>