<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_edge"
        android:layout_marginTop="50dp"
        android:text="@string/member_expired_at_yesterday"
        android:textColor="@color/gray_level1"
        android:textSize="@dimen/text_xx_big"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_edge"
        android:layout_marginTop="2dp"
        android:text="@string/member_expired_functions_desc"
        android:textColor="@color/gray_level2"
        android:visibility="gone"
        android:textSize="@dimen/text_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_edge"
        android:layout_marginTop="20dp"
        android:text="@string/member_expired_retaining_desc"
        android:textColor="@color/gray_level1"
        android:textSize="@dimen/text_normal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvDialogMemberDevices"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:nestedScrollingEnabled="false"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvDialogMemberConfirm"
        style="@style/Style_Round_Gray_Btn_Big_Longest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_retain_the_device" />

    <TextView
        android:id="@+id/tvDialogMemberRenewalFee"
        style="@style/Style_Round_Green_Btn_Big_Longest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/renewal_fee_member" />

</LinearLayout>