<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.gwchina.sdk.base.widget.GwTitleLayout
        android:id="@+id/gtlSuperviseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:gtl_show_cutting_line="true"
        app:gtl_title="监督模式"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gtlSuperviseTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/common_edge"
            android:layout_marginStart="@dimen/common_edge"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSuperviseIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/ios_img_top"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvSuperviseOpenModelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/open_supervise_model"
                android:textColor="@color/gray_level1"
                android:textSize="@dimen/text_x_big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSuperviseOpenModelDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/supervise_model_details"
                android:textColor="@color/gray_level2"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/tvSuperviseOperateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/how_to_operate"
                android:textColor="@color/gray_level1"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSuperviseOpenModelStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/open_supervise_model_step"
                android:textColor="@color/gray_level2"
                android:textSize="14sp" />

            <com.android.base.widget.ratio.CenterDrawableTextView
                android:id="@+id/tvWatchOperationalVideo"
                style="@style/Style_Round_Green_Btn_Big_Longest"
                android:layout_marginTop="30sp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/app_icon_play"
                android:text="@string/watch_operational_video" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvSuperviseCallCustomerService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/call_customer_service"
                android:textColor="@color/gray_level2"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>