<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/shape_white_solid_round10">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_warning_red"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvDialogMemberFunctionsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/gray_level1"
        android:textSize="@dimen/text_big"
        android:text="@string/child_not_install_green_browser"/>

    <TextView
        android:id="@+id/tvDialogMemberFunctionsDescSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/gray_level2"
        android:textSize="@dimen/text_small"
        android:text="@string/android_phone_use_green_net"/>

    <Button
        android:id="@+id/btnDialogBrowser"
        style="@style/Style_Round_Green_Btn_Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/i_got_it"/>

</LinearLayout>