<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.RelativeLayout">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/vcilTilValidateCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.gwchina.sdk.base.widget.text.FixedTextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:drawablePadding="@dimen/input_text_drawable_padding"
            android:drawableStart="@drawable/sel_message_icon"
            android:gravity="center_vertical"
            android:hint="@string/sms_code"
            android:inputType="number"
            android:maxLength="@integer/validate_code_length"
            tools:hint="短信验证码"/>

    </android.support.design.widget.TextInputLayout>

    <com.gwchina.sdk.base.widget.text.CounterButton
        android:id="@+id/vcilCounterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?selectableItemBackground"
        android:paddingBottom="6dp"
        android:paddingEnd="11dp"
        android:paddingStart="11dp"
        android:paddingTop="6dp"
        android:singleLine="true"
        android:text="@string/obtain_validate_code"
        android:textSize="@dimen/text_normal"
        app:ccb_text_counting_color="@color/gray_level1"
        app:ccb_text_disable_color="@color/gray_level3"
        app:ccb_text_hint_format="@string/sms_code_again_tips_mask"
        app:ccb_text_normal_color="@color/green_level1"/>

    <!--design_text_input_password_icon-->
    <ImageButton
        android:id="@+id/vcilClearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/vcilCounterBtn"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:src="@drawable/icon_clear"
        tools:ignore="ContentDescription"/>

</merge>