<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_solid_round10"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="服务条款和隐私政策提示"
        android:textColor="@color/gray_level1"
        android:textSize="@dimen/text_big"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="欢迎使用格雷盒子！"
        android:textColor="@color/gray_level3"
        android:textSize="@dimen/text_normal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/common_edge"
        android:layout_marginStart="@dimen/common_edge"
        android:layout_marginTop="20dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_privacy_agreement"
            android:textColor="@color/gray_level2"
            android:textSize="@dimen/text_small"/>

    </ScrollView>

    <TextView
        android:id="@+id/tvDialogPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_edge"
        android:layout_marginStart="@dimen/common_edge"
        android:layout_marginTop="17dp"
        android:textColor="@color/blue_level2"/>

    <TextView
        android:id="@+id/tvDialogPrivacyAgree"
        style="@style/Style_Round_Green_Btn_Big_Longest"
        android:layout_marginTop="22dp"
        android:text="@string/agree"/>

    <TextView
        android:id="@+id/tvDialogPrivacyNotAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/common_edge_big"
        android:layout_marginStart="@dimen/common_edge_big"
        android:layout_marginTop="5dp"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/not_agree"
        android:textColor="@color/gray_level2"
        android:textSize="@dimen/text_normal"/>

</LinearLayout>