<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="ResourceName">

    <com.gwchina.sdk.base.widget.GwTitleLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:gtl_show_cutting_line="false"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_edge_big"
        android:layout_marginTop="30dp"
        android:text="@string/toolbar_title_change_pwd"
        android:textColor="@color/gray_level1"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/tvOldPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_edge_big"
        android:text="@string/old_password"
        android:textColor="@color/gray_level1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tilOldPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilOldPassword"/>

    <com.gwchina.sdk.base.widget.text.ClearableTextInputLayout
        android:id="@+id/tilOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_edge_big"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/tvOldPasswordLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:passwordToggleDrawable="@drawable/sel_password_toggle"
        app:passwordToggleEnabled="true">

        <com.gwchina.sdk.base.widget.text.FixedTextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/hint_setup_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_length"
            android:singleLine="true"
            android:textSize="@dimen/text_normal"/>

    </com.gwchina.sdk.base.widget.text.ClearableTextInputLayout>

    <TextView
        android:id="@+id/tvNewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_edge_big"
        android:text="@string/new_password"
        android:textColor="@color/gray_level1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tilNewPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilNewPassword"/>

    <com.gwchina.sdk.base.widget.text.ClearableTextInputLayout
        android:id="@+id/tilNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_edge_big"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/tvNewPasswordLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilOldPassword"
        app:passwordToggleDrawable="@drawable/sel_password_toggle"
        app:passwordToggleEnabled="true">

        <com.gwchina.sdk.base.widget.text.FixedTextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/hint_setup_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_length"
            android:singleLine="true"
            android:textSize="@dimen/text_normal"/>

    </com.gwchina.sdk.base.widget.text.ClearableTextInputLayout>

    <TextView
        android:id="@+id/tvConfirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/gray_level1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tilConfirmPassword"
        app:layout_constraintRight_toRightOf="@+id/tvNewPasswordLabel"
        app:layout_constraintTop_toTopOf="@+id/tilConfirmPassword"/>

    <com.gwchina.sdk.base.widget.text.ClearableTextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_edge_big"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/tvConfirmPasswordLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNewPassword"
        app:passwordToggleDrawable="@drawable/sel_password_toggle"
        app:passwordToggleEnabled="true">

        <com.gwchina.sdk.base.widget.text.FixedTextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/hint_setup_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_length"
            android:singleLine="true"
            android:textSize="@dimen/text_normal"/>

    </com.gwchina.sdk.base.widget.text.ClearableTextInputLayout>

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/btnConfirm"
        style="@style/Style_Round_Green_Btn_Big_Longest"
        android:layout_marginTop="31dp"
        android:enabled="false"
        android:text="@string/change_password_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"/>

</android.support.constraint.ConstraintLayout>